# ComfyUI_HardwareMonitor

./: README.md  __init__.py  package-lock.json  package.json  pyproject.toml  requirements.txt
core/: common.py
general/: __init__.py  gpu.py  hardware.py  monitor.py  shared_gpu_memory.py  transfer_speed.py
server/: monitor.py
tests/: __init__.py  conftest.py  pytest.ini  test_direct_module_imports.py  test_gpu.py  test_shared_gpu_memory.py  test_transfer_speed.py
web/: chartManager.d.ts  chartManager.js  chartManager.ts  hardwareCharts.css  hardwareChartsUI.d.ts  hardwareChartsUI.js  hardwareChartsUI.ts  monitor.css  monitor.js  monitor.ts  monitorUI.d.ts  monitorUI.js  monitorUI.ts  styles.d.ts  styles.js  styles.ts  types.d.ts  utils.js
