[project]
name = "ComfyUI-HardwareMonitor"
description = "Real-time hardware monitoring panel for ComfyUI with CPU, RAM, GPU, VRAM usage charts and transfer speed monitoring."
version = "1.0.0"
license = { file = "LICENSE" }
dependencies = ["torch", "numpy", "pynvml", "py-cpuinfo"]

classifiers = [
  "Operating System :: OS Independent",
  "Environment :: GPU :: NVIDIA CUDA",
]

[project.urls]
Repository = "https://github.com/KANAsho116/ComfyUI_HardwareMonitor"

[tool.comfy]
PublisherId = "KANAsho116"
DisplayName = "Hardware Monitor"
